# Guardrails-websockets-mcp-webhooks

./: README.md
Guardrails/: .env  guardrails.ipynb  pyproject.toml  requirements.txt
MCP_demo/: .env  README.md  client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
WebhooksDemo/: README.md  client.py  main.py
WebsocketsDemo/: README.md  main.py  requirements.txt
WebsocketsDemo/templates/: admin.html  index.html
